--- a/apps/contratos/templates/contratos/lista_contratos.html
+++ b/apps/contratos/templates/contratos/lista_contratos.html
@@ -148,10 +148,16 @@
                         </td>
                         <td class="px-8 py-6 text-right">
                             <div class="flex justify-end gap-3">
-                                <a href="{% url 'contratos:detalle' contrato.pk %}" class="w-10 h-10 flex items-center justify-center rounded-xl bg-slate-100 text-slate-600 hover:bg-blue-900 hover:text-white transition-all shadow-sm border border-slate-200">
+                                <a href="{% url 'contratos:historial' contrato.pk %}" 
+                                   class="w-10 h-10 flex items-center justify-center rounded-xl bg-slate-100 text-slate-600 hover:bg-orange-500 hover:text-white transition-all shadow-sm border border-slate-200" 
+                                   title="Ver Historial">
+                                    <i class="fas fa-history text-xs"></i>
+                                </a>
+
+                                <a href="{% url 'contratos:detalle' contrato.pk %}" class="w-10 h-10 flex items-center justify-center rounded-xl bg-slate-100 text-slate-600 hover:bg-blue-900 hover:text-white transition-all shadow-sm border border-slate-200" title="Ver Detalle">
                                     <i class="fas fa-eye text-xs"></i>
                                 </a>
-                                <a href="{% url 'contratos:descargar_pdf' contrato.pk %}" class="w-10 h-10 flex items-center justify-center rounded-xl bg-slate-100 text-slate-600 hover:bg-red-600 hover:text-white transition-all shadow-sm border border-slate-200">
+                                <a href="{% url 'contratos:descargar_pdf' contrato.pk %}" class="w-10 h-10 flex items-center justify-center rounded-xl bg-slate-100 text-slate-600 hover:bg-red-600 hover:text-white transition-all shadow-sm border border-slate-200" title="Descargar PDF">
                                     <i class="fas fa-file-pdf text-xs"></i>
                                 </a>
                             </div>
